frontend/test/should_fail/graphof_argument_mismatch_exec.grg
#using "graphof_model.gm"

rule r(var i:int) {
	n:N -e:E-> n;

	modify {
	---
		exec( { { graphof(i) != graphof(e) } } );
	}
}
